<resources>
    <string name="app_name">EMQAndroidToolkit</string>
    <string name="action_about">About</string>

    <!--add connection-->
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="client_id">Client ID</string>
    <string name="default_port">1883</string>
    <string name="hint_username">Username(Optional)</string>
    <string name="hint_password">Password(Optional)</string>
    <string name="add_connection">Add</string>
    <string name="save_connection">Save</string>
    <string name="clean_session">Clean Session:</string>
    <string name="timeout">Timeout</string>
    <string name="keepalive">KeepAlive</string>
    <string name="general">General</string>
    <string name="advanced">Advanced</string>
    <string name="last_will">Last Will and Testament</string>

    <!--operate connection-->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!--subscribe and publish-->
    <string name="topic">Topic</string>
    <string name="QoS">QoS</string>
    <string name="subscribe">Subscribe</string>
    <string name="publish">Publish</string>
    <string name="retained">Retained:</string>
    <string name="payload">Payload</string>


    <string name="connect">Connect</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnect">Disconnect</string>
    <string name="hint_disconnect">Server is disconnect</string>
    <string name="connected">Connected</string>
    <string name="connect_fail">Fail</string>

    <string name="connection">Connection</string>
    <string name="publication">Publication</string>
    <string name="subscription">Subscription</string>
    <string name="unsubscribe">Unsubscribe</string>

    <string name="subscribe_success">Subscribe success</string>
    <string name="subscribe_fail">Subscribe fail</string>
    <string name="unsubscurbe_success">Unsubscribe success</string>
    <string name="unsubscirbe_fail">Unsubscribe fail</string>
    <string name="publish_fail">Publish fail</string>
    <string name="done">Done</string>


</resources>
